--- a/index.html
+++ b/index.html
@@ -6,13 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="./css/main.css">
     <link rel="./css/font-awesome.min.css">
+    <link rel=" shortcut icon" href="./img/favicon.png" type="image/png">
     <title>Batai</title>
 </head>
 <body>
+    <div class="background"></div>
     <header>
-        <a href=""></a>
-        <nav></nav>
-    </header>
+        <img src="./img/logo.png" alt="Logotipas">
+        <nav>
+            <div>
+                <a href="#">Home</a>
+                <a href="#">He's</a>
+                <a href="#">She's</a>
+                <a href="#">About us</a>
+                <a href="#">Contact us/a>
+            </div>
+            <div>
+                <i class="fa fa-search" aria-hidden="true"></i>
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                <i class="fa fa-user-o" aria-hidden="true"></i>
+            </div>
+        </nav>
+    </header> 
     <i class="fa fa-twitter" aria-hidden="true"></i>
 </body>
 </html>
