--- a/index.html
+++ b/index.html
@@ -7,27 +7,38 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
     <link rel=" shortcut icon" href="./img/favicon.png" type="image/png">
-    <title>Batai</title>
+    <title>Adidas</title>
 </head>
 <body>
     <div class="background"></div>
     <header>
-        <img src="./img/logo.png" alt="Logotipas">
-        <nav>
-            <div>
-                <a href="#">Home</a>
-                <a href="#">He's</a>
-                <a href="#">She's</a>
-                <a href="#">About us</a>
-                <a href="#">Contact us/a>
+            <div class="logotipas">
+                <img class="logotipas" src="./img/adidas-logotipas.png" alt="Adidas Logotipas">
             </div>
-            <div>
-                <i class="fa fa-search" aria-hidden="true"></i>
-                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                <i class="fa fa-user-o" aria-hidden="true"></i>
+            <div class="nav-top">
+                <div class="top-menu">
+                    <a href="#">Home</a>
+                    <a href="#">He's</a>
+                    <a href="#">She's</a>
+                    <a href="#">About us</a>
+                    <a href="#">Contact us</a> 
+                </div>    
+                <div class=top-icons">
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    <i class="fa fa-user-o" aria-hidden="true"></i>
+                </div>
             </div>
-        </nav>
     </header> 
+    <main>
+        <div class="prekes-container">        
+                <div class="tekstas">
+            <p>adidas shoes</p>
+            <p>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
+            <p>$150 </p>
+        </div>
+        <img src="./img/mergaite.png" alt="Liudnas veidelis su mergina">    
+    </main>   
     <i class="fa fa-twitter" aria-hidden="true"></i>
 </body>
 </html>
