--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="#">About us</a>
                 <a href="#">Contact us</a> 
             </nav>    
-            <div class=top-icons">
+            <div class="top-icons">
                 <i class="fa fa-search" aria-hidden="true"></i>
                 <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                 <i class="fa fa-user-o" aria-hidden="true"></i>
@@ -30,10 +30,10 @@
     </header> 
     <main class="prekes-container">        
         <div class="tekstas">
-            <p>adidas shoes</p>
-            <p>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
+            <p class="prekes-pavadinimas">adidas shoes</p>
+            <p class="prekes-aprasymas">Is simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
             <p>$150 </p>
-        </div>    
+        </div>
         <div></div>
         <div></div>
     </main>  
