--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <a href="#">Contact us</a> 
             </nav>    
             <div class="top-icons">
-                <i class="fa fa-search" aria-hidden="true"></i>
-                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                <i class="fa fa-user-o" aria-hidden="true"></i>
+                <a class="fa fa-search" aria-hidden="true" href="#""></a>
+                <a class="fa fa-shopping-cart" aria-hidden="true" href="#""></a>
+                <a class="fa fa-user-o" aria-hidden="true" href="#""></a>
             </div>
         </div>
     </header> 
@@ -32,7 +32,9 @@
         <div class="tekstas">
             <p class="prekes-pavadinimas">adidas shoes</p>
             <p class="prekes-aprasymas">Is simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
-            <p>$150 </p>
+            <p class="prekes-kaina">$150.00</p>
+            <p class="shop-now">Shop now</p>
+            <p class=shop-now-rodykle"><a class="fa fa-long-arrow-right" aria-hidden="true"></a></p>
         </div>
         <div></div>
         <div></div>
