--- a/index.html
+++ b/index.html
@@ -34,10 +34,15 @@
             <p class="prekes-aprasymas">Is simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
             <p class="prekes-kaina">$150.00</p>
             <p class="shop-now">Shop now</p>
-            <p class=shop-now-rodykle"><a class="fa fa-long-arrow-right" aria-hidden="true"></a></p>
+            <button type="submit"> <li class="fa fa-long-arrow-right" aria-hidden="true"></li></button>
         </div>
-        <div></div>
-        <div></div>
+        <div class="prekes-nr">O1.</div>
+        <div class="soc-tinklai">
+            <a class="fa fa-twitter" aria-hidden="true" href="http://www.twitter.com"></a>
+            <a class="fa fa-facebook" aria-hidden="true" href="http://www.facebook.com"></a>
+            <a class="fa fa-linkedin" aria-hidden="true" href="http://www.linkedin.com"></a>
+            <a class="fa fa-tumblr" aria-hidden="true" href="http://www.tumbler.com"></a>
+        </div>
     </main>  
      
 </body>
