--- a/index.html
+++ b/index.html
@@ -38,12 +38,29 @@
         </div>
         <div class="prekes-nr">O1.</div>
         <div class="soc-tinklai">
-            <a class="fa fa-twitter" aria-hidden="true" href="http://www.twitter.com"></a>
-            <a class="fa fa-facebook" aria-hidden="true" href="http://www.facebook.com"></a>
-            <a class="fa fa-linkedin" aria-hidden="true" href="http://www.linkedin.com"></a>
-            <a class="fa fa-tumblr" aria-hidden="true" href="http://www.tumbler.com"></a>
-        </div>
+            <a class="fa fa-twitter" aria-hidden="true" href="http://www.twitter.com" target="_blank"></a>
+            <a class="fa fa-facebook" aria-hidden="true" href="http://www.facebook.com" target="_blank"></a>
+            <a class="fa fa-linkedin" aria-hidden="true" href="http://www.linkedin.com" target="_blank"></a>
+            <a class="fa fa-tumblr" aria-hidden="true" href="http://www.tumbler.com" target="_blank"></a>
+        </div> 
+        <div class="slaideris">
+            <div class="puslapiai">
+                <div class="psl-pirmas">01</div>
+                <div class="psl-paskutinis">03</div>
+            </div>
+            <div class="juosta">
+                <div class="juostos-elementas-1"></div>
+                <div class="juostos-elementas-2"></div>
+                <div class="juostos-elementas-3"></div>
+            </div>
+<!--        <div class="juosta">
+                <div class="juostos-elementas-active"></div>
+                <div class="juostos-elementas"></div>
+                <div class="juostos-elementas"></div>
+            </div> 
+-->
+        </footer> 
     </main>  
-     
+   
 </body>
 </html>
