--- a/index-02.html
+++ b/index-02.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/preke1.css">
+    <link rel="stylesheet" href="./css/preke2.css">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
     <title>Adidas</title>
@@ -31,13 +31,13 @@
     </header> 
     <main class="prekes-container">        
         <div class="tekstas">
-            <p class="prekes-pavadinimas">adidas shoes</p>
+            <p class="prekes-pavadinimas">running shoes</p>
             <p class="prekes-aprasymas">Is simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
-            <p class="prekes-kaina">$150.00</p>
+            <p class="prekes-kaina">$190.00</p>
             <p class="shop-now">Shop now</p>
             <button type="submit"> <li class="fa fa-long-arrow-right" aria-hidden="true"></li></button>
         </div>
-        <div class="prekes-nr">O1.</div>
+        <div class="prekes-nr">O2.</div>
         <div class="soc-tinklai">
             <a class="fa fa-twitter" aria-hidden="true" href="http://www.twitter.com" target="_blank"></a>
             <a class="fa fa-facebook" aria-hidden="true" href="http://www.facebook.com" target="_blank"></a>
@@ -50,13 +50,13 @@
                 <div class="psl-paskutinis">03</div>
             </div>
             <div class="juosta">
+                <div class="juostos-elementas"><a href="index.html"><img width="100%" height="100%" src="./img/button.png" alt=""></a></div>
                 <div class="juostos-elementas-active"><img width="100%" height="100%" src="./img/button.png" alt=""></div>
-                <div class="juostos-elementas"><a href="index-02.html"><img width="100%" height="100%" src="./img/button.png" alt=""></a></div>
                 <div class="juostos-elementas"><a href="index-03.html"><img width="100%" height="100%" src="./img/button.png" alt=""></a></div>
             </div>
 <!--        <div class="juosta">
-                <div class="juostos-elementas-active"></div>
                 <div class="juostos-elementas"></div>
+                <div class="juostos-elementas-active"></div>
                 <div class="juostos-elementas"></div>
             </div> 
 -->
