Solved problems with logo

--- a/index-02.html
+++ b/index-02.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/preke2.css">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="../img/favicon.png" type="image/png">
     <title>Adidas</title>
 </head>
 <body>
     <div class="background"></div>
     <header>
-        <img class="logotipas" src="./img/adidas-logotipas.png" alt="Adidas Logotipas">
+        <img class="logotipas" src="../img/adidas-logotipas.png" alt="Adidas Logotipas">
         <div class="nav-top">
             <nav class="top-menu">
                 <a href="#">Home</a>
