--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="background"></div>
     <header>
-        <img class="logotipas" src="./img/adidas-logotipas.png" alt="Adidas Logotipas">
+        <img class="logotipas" src="../img/adidas-logotipas.png" alt="Adidas Logotipas">
         <div class="nav-top">
             <nav class="top-menu">
                 <a href="#">Home</a>
