--- a/index-02.html
+++ b/index-02.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/preke2.css">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
-    <link rel="shortcut icon" href="../img/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
     <title>Adidas</title>
 </head>
 <body>
