Pataisyta nuorodu juosta

--- a/index-02.html
+++ b/index-02.html
@@ -50,9 +50,9 @@
                 <div class="psl-paskutinis">03</div>
             </div>
             <div class="juosta">
-                <div class="juostos-elementas"><a href="index.html"><img width="100%" height="100%" src="./img/button.png" alt=""></a></div>
+                <div class="juostos-elementas"><a class="p-link" href="index.html"><img width="100%" height="100%" src="./img/button.png" alt=""></a></div>
                 <div class="juostos-elementas-active"><img width="100%" height="100%" src="./img/button.png" alt=""></div>
-                <div class="juostos-elementas"><a href="index-03.html"><img width="100%" height="100%" src="./img/button.png" alt=""></a></div>
+                <div class="juostos-elementas"><a class="p-link" href="index-03.html"><img width="100%" height="100%" src="./img/button.png" alt=""></a></div>
             </div>
 <!--        <div class="juosta">
                 <div class="juostos-elementas"></div>
