--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             </div>
             <div class="juosta">
                 <div class="juostos-elementas-active"><img width="100%" height="100%" src="./img/button.png" alt=""></div>
-                <div class="juostos-elementas"><a href="index-02.html"><img width="100%" height="100%" src="./img/button.png" alt=""></a></div>
-                <div class="juostos-elementas"><a href="index-03.html"><img width="100%" height="100%" src="./img/button.png" alt=""></a></div>
+                <div class="juostos-elementas"><a class="p-link" href="index-02.html"><img width="100%" height="100%" src="./img/button.png" alt=""></a></div>
+                <div class="juostos-elementas"><a class="p-link" href="index-03.html"><img width="100%" height="100%" src="./img/button.png" alt=""></a></div>
             </div>
 <!--        <div class="juosta">
                 <div class="juostos-elementas-active"></div>
